--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,17 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  padding: 30px 0;
+}
+
+.App {
+  text-align: center;
+}
+
+h1 {
+  font-family: 'Indie Flower', cursive;
+  font-size: 72px;
+  color: #0ccac4;
+}
